--- a/your-loan-t2.html
+++ b/your-loan-t2.html
@@ -93,72 +93,72 @@
             <th>Status</th>
           </tr>
           <tr>
-            <td><a href="module-record-t2b.html">A218 Medicine and society in Europe 1500-1930</a></td>
+            <td>A218 Medicine and society in Europe 1500-1930</td>
             <td>£999</td>
-            <td><a href="#">Payment pending</a></td>
+            <td>Payment pending</td>
           </tr>
           <tr>
-            <td><a href="module-record-t2b.html">K319 Adulthood, ageing and the life course</a></td>
+            <td>K319 Adulthood, ageing and the life course</td>
             <td>£1,025</td>
             <td>Payment received</td>
           </tr>
           <tr>
-            <td><a href="module-record-t2b.html">KE312 Working together for children</a></td>
+            <td>KE312 Working together for children</td>
             <td>£876</td>
             <td>Payment received</td>
           </tr>
           <tr>
-            <td><a href="module-record-t2b.html">K218 Working with children, young people and families</a></td>
+            <td>K218 Working with children, young people and families</td>
             <td>£1,120</td>
             <td>Payment received</td>
           </tr>
           <tr>
-            <td><a href="module-record-t2b.html">K101 An introduction to health and social care</a></td>
+            <td>K101 An introduction to health and social care</td>
             <td>£980</td>
             <td>Payment received</td>
           </tr>
           <tr>
-            <td><a href="module-record-t2b.html">SA188 Archaeology: the science of investigation</a></td>
+            <td>SA188 Archaeology: the science of investigation</td>
             <td>£1,078</td>
             <td>Payment received</td>
             </tr>
           <tr>
-            <td><a href="module-record-t2b.html">SA188 Archaeology: the science of investigation</a></td>
+            <td>SA188 Archaeology: the science of investigation</td>
             <td>£920</td>
             <td>Payment received</td>
             </tr>
           <tr>
-            <td><a href="module-record-t2b.html">A219 Exploring the classical world</a></td>
+            <td>A219 Exploring the classical world</td>
             <td>£1,000</td>
             <td>Payment received</td>
             </tr>
           <tr>
-            <td><a href="module-record-t2b.html">A177 Shakespeare: an introduction</a></td>
+            <td>A177 Shakespeare: an introduction</td>
             <td>£1,200</td>
             <td>Payment received</td>
             </tr>
           <tr>
-            <td><a href="module-record-t2b.html">AT272 Ancient and medieval cities: a technological history</a></td>
+            <td>AT272 Ancient and medieval cities: a technological history</td>
             <td>£1,050</td>
             <td>Payment received</td>
             </tr>
           <tr>
-            <td><a href="module-record-t2b.html">S193 Fossils and the history of life</a></td>
+            <td>S193 Fossils and the history of life</td>
             <td>£908</td>
             <td>Payment received</td>
             </tr>
           <tr>
-            <td><a href="module-record-t2b.html">S193 Fossils and the history of life</a></td>
+            <td>S193 Fossils and the history of life</td>
             <td>£899</td>
             <td>Payment received</td>
             </tr>
           <tr>
-            <td><a href="module-record-t2b.html">A103 An introduction to the humanities</a></td>
+            <td>A103 An introduction to the humanities</td>
             <td>£1,200</td>
             <td>Payment received</td>
             </tr>
           <tr>
-            <td><a href="module-record-t2b.html">A178 Perspectives on Leonardo da Vinci</a></td>
+            <td>A178 Perspectives on Leonardo da Vinci</td>
             <td>£1,120</td>
             <td>Payment received</td>
           </tr>
