linked to next module page, fixed github notice

--- a/study-record-t2a.html
+++ b/study-record-t2a.html
@@ -121,7 +121,7 @@ $(document).ready(function(){
 <div class="box-alert">
     <h2>Not currently studying</h2>
     <p>You have not yet selected any modules for this academic year. You may still be able to choose modules to start this year. If you’re not planning to study this year please <a href="#">tell us</a>.</p>
-    <p><a href="#" class="ou-btn">Choose next modules</a></p>
+    <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
 </div>
 
 <hr>
