updated file name of studenthome

--- a/finance.html
+++ b/finance.html
@@ -79,15 +79,17 @@
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome.html">StudentHome</a></li>
 	<li><a href="profile.html">Profile</a></li>
-  <li>Your student Loan</li>
+  <li>Your payment options</li>
 </ol>
 
 <div class="r2">
     <div class="ou-content" id="ou-content">
-      <h1 class="h1main">Your student loan for Bachelor of Engineering (Honours)</h1>
+      <h1 class="h1main">Your payment options</h1>
       <div class="inview">
 
     <div class="inview_inner">
+
+    <p><strong>You are paying by student loan</strong> for Bachelor of Engineering (Honours)</p>
 
         <p>
             <strong>Your CRN is:
