--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ hr {margin:2em 0; padding:0;}
 <h2>Pages in scope</h2>
 
 <ol>
- <li><a href="studenthome-help-tips.html">StudentHome</a> - addition of Help tips to the right hand column</li>
+ <li><a href="studenthome.html">StudentHome</a> - addition of Help tips to the right hand column</li>
   <li><a href="interrupt-page.html">Interrupt page</a> - brand new page to appear before module chooser</li>
     <li><a href="profile.html">Profile</a>
         <ol>
@@ -44,7 +44,7 @@ hr {margin:2em 0; padding:0;}
         <li><a href="research-record.html">Research record</a></li>
       </ol>
     </li>
-    <li><a href="finance.html">Finance / loan</a></li>
+    <li><a href="finance.html">Payment options</a></li>
     <li><a href="profile-edit.html">Edit profile</a></li>
   </ol>
   </li>
