--- a/profile.html
+++ b/profile.html
@@ -87,27 +87,32 @@
 <h1>Your profile</h1>
 <div class="inview">
   
+<p>Hi Kapil. This is your profile area where you can view and make changes to your account.</p>
 
-<p>You can view and change your</p>
+<hr>
 
-  <ul>
-  <li><a href="contact-details.html">Contact details</a></li>
-      <li><a href="current-occupation.html">Current occupation and study motivation</a></li>
-          <li><a href="identity-and-needs.html">Identity, needs and cicumstances</a></li>
-  <li><a href="previous-education.html">Previous education and background</a></li>
-    <li><a href="study-record.html">Study record</a></li>
-    <li><a href="finance.html">Finance</a></li>
+<div class="ou-block2">
+   		<p><strong>You can view and change your</strong></p>
+        <ul class="list-style2">
+        <li><a href="contact-details.html">Contact details</a></li>
+        <li><a href="current-occupation.html">Current occupation and study motivation</a></li>
+        <li><a href="identity-and-needs.html">Identity, needs and cicumstances</a></li>
+        <li><a href="previous-education.html">Previous education and background</a></li>
+        <li><a href="study-record.html">Study record</a></li>
+        <li><a href="finance.html">Finance</a></li>
+        </ul>
+</div>
 
-    </ul>
+<div class="ou-block2">
+    	<p><strong>You can also</strong></p>
+      	<ul class="list-style2">
+        <li><a href="#">Change your password</a></li>
+        <li><a href="http://learn2.open.ac.uk/user/profile.php">Edit your online appearance</a></li>
+        <li><a href="http://learn2.open.ac.uk/course/format/studyplan/settings_manage.php">Set preferences for your online learning environment</a></li>
+  		</ul>
+</div>  
 
-<p>You can also</p>
-    <ul>
-    <li><a href="#">Change your password</a></li>
-    <li><a href="http://learn2.open.ac.uk/user/profile.php">Edit your online appearance</a></li>
-    <li><a href="http://learn2.open.ac.uk/course/format/studyplan/settings_manage.php">Set preferences for your online learning environment</a></li>
-    
-  </ul>
-    
+
 
 </div>
 
