--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ hr {margin:2em 0; padding:0;}
         <li><a href="research-record.html">Research record</a></li>
       </ol>
     </li>
-    <li><a href="finance.html">Payment options</a></li>
+    <li><a href="finance.html">Payment and funding</a></li>
     <li><a href="profile-edit.html">Edit profile</a></li>
   </ol>
   </li>
