--- a/module-record-t1b.html
+++ b/module-record-t1b.html
@@ -102,7 +102,7 @@
 
     <h2 class="style1">Overall module result</h2>
         
-    <p class="module-result">Pass</p>
+    <p class="module-result">Fail</p>
     
     <table class="two-cols">
       <tbody>
