--- a/profile-t1.html
+++ b/profile-t1.html
@@ -93,9 +93,9 @@
   <li><a href="your-contact-details-t1.html">Contact details</a></li>
       <li><a href="your-current-occupation-study-t1.html">Current occupation and study motivation</a></li>
           <li><a href="your-identity-needs-t1.html">Identity, needs and cicumstances</a></li>
+          <li><a href="your-loan-t1.html">Payment and funding</a></li>
   <li><a href="your-previous-edu-bg-t1.html">Previous education and background</a></li>
     <li><a href="t1-study-record-scenarios.html">Study record</a></li>
-    <li><a href="your-loan-t1.html">Student loan</a></li>
 
     </ul>
 
