--- a/profile-t2.html
+++ b/profile-t2.html
@@ -93,9 +93,10 @@
   <li><a href="your-contact-details-t2.html">Contact details</a></li>
       <li><a href="your-current-occupation-study-t2.html">Current occupation and study motivation</a></li>
           <li><a href="your-identity-needs-t2.html">Identity, needs and cicumstances</a></li>
+          <li><a href="your-loan-t2.html">Payment and funding</a></li>
   <li><a href="your-previous-edu-bg-t2.html">Previous education and background</a></li>
     <li><a href="study-record-t2a.html">Study record</a></li>
-    <li><a href="your-loan-t2.html">Payment history</a></li>
+    
 
     </ul>
 
