--- a/profile-t3.html
+++ b/profile-t3.html
@@ -93,9 +93,10 @@
   <li><a href="your-contact-details-t3.html">Contact details</a></li>
       <li><a href="your-current-occupation-study-t3.html">Current occupation and study motivation</a></li>
           <li><a href="your-identity-needs-t3.html">Identity, needs and cicumstances</a></li>
+          <li><a href="your-loan-t3.html">Payment and funding</a></li>
   <li><a href="your-previous-edu-bg-t3.html">Previous education and background</a></li>
     <li><a href="study-record-t3a.html">Study record</a></li>
-    <li><a href="your-loan-t3.html">Student loan</a></li>
+    
 
     </ul>
 
