--- a/profile-t4.html
+++ b/profile-t4.html
@@ -93,9 +93,10 @@
   <li><a href="your-contact-details-t4.html">Contact details</a></li>
       <li><a href="your-current-occupation-study-t4.html">Current occupation and study motivation</a></li>
           <li><a href="your-identity-needs-t4.html">Identity, needs and cicumstances</a></li>
+           <li><a href="your-loan-t4.html">Payment and funding</a></li>
   <li><a href="your-previous-edu-bg-t4.html">Previous education and background</a></li>
     <li><a href="t4-study-record-scenarios.html">Study record</a></li>
-    <li><a href="your-loan-t4.html">Student loan</a></li>
+   
 
     </ul>
 
