--- a/profile.html
+++ b/profile.html
@@ -96,7 +96,7 @@
           <li><a href="identity-and-needs.html">Identity, needs and cicumstances</a></li>
   <li><a href="previous-education.html">Previous education and background</a></li>
     <li><a href="study-record.html">Study record</a></li>
-    <li><a href="finance.html">Payment options</a></li>
+    <li><a href="finance.html">Payment and funding</a></li>
 
     </ul>
 
