--- a/your-loan-a.html
+++ b/your-loan-a.html
@@ -79,12 +79,12 @@
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome-a.html">StudentHome</a></li>
 	<li><a href="profile-a.html">Profile</a></li>
-  <li>Your student Loan</li>
+  <li>Your payment and funding</li>
 </ol>
 
 <div class="r2">
     <div class="ou-content" id="ou-content">
-      <h1 class="h1main">Your student loan for Bachelor of Engineering (Honours)</h1>
+      <h1 class="h1main">Your payment and funding</h1>
       <div class="inview">
 
 
@@ -92,7 +92,7 @@
 
     
 
-
+<p><strong>You are paying buy student loan</strong> for Bachelor of Engineering (Honours)</p>
 
 
     
