--- a/your-loan-t2.html
+++ b/your-loan-t2.html
@@ -79,13 +79,17 @@
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome-t2.html">StudentHome</a></li>
 	<li><a href="profile-t2.html">Profile</a></li>
-  <li><span class="h1main">Your payment history</span></li>
+  <li><span class="h1main">Your payment and funding</span></li>
 </ol>
 
 <div class="r2">
     <div class="ou-content" id="ou-content">
-      <h1 class="h1main">Your payment history</h1>
+      <h1 class="h1main">Your payment and funding</h1>
       <div class="inview">
+
+<p>You are not currently studying but if study toward a qualification you may be eligible for a loan. <a href="#">View your qualification choices</a></p>
+
+      <h2>Payment history</h2>
         <table>
           <tr>
             <th>Module</th>
