--- a/your-loan-t4.html
+++ b/your-loan-t4.html
@@ -79,15 +79,15 @@
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome-t4.html">StudentHome</a></li>
 	<li><a href="profile-t4.html">Profile</a></li>
-  <li>Your student Loan</li>
+  <li>Your payment and funding</li>
 </ol>
 
 <div class="r2">
     <div class="ou-content" id="ou-content">
-      <h1 class="h1main">Your student loan for BA/BSc (Honours) Open degree</h1>
+      <h1 class="h1main">Your payment and funding</h1>
       <div class="inview">
 
-
+<p><strong>You are paying by student loan</strong> for BA/BSc (Honours) Open degree</p>
 
 
     
