--- a/finance.html
+++ b/finance.html
@@ -79,12 +79,12 @@
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome.html">StudentHome</a></li>
 	<li><a href="profile.html">Profile</a></li>
-  <li>Your payment options</li>
+  <li>Your payment and funding</li>
 </ol>
 
 <div class="r2">
     <div class="ou-content" id="ou-content">
-      <h1 class="h1main">Your payment options</h1>
+      <h1 class="h1main">Your payment and funding</h1>
       <div class="inview">
 
     <div class="inview_inner">
