--- a/your-loan-b.html
+++ b/your-loan-b.html
@@ -79,12 +79,12 @@
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome-b.html">StudentHome</a></li>
 	<li><a href="profile-b.html">Profile</a></li>
-  <li>Your student loan</li>
+  <li>Your payment and funding</li>
 </ol>
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1 class="h1main">Your student loan</h1>
+<h1 class="h1main">Your payment and funding</h1>
 
 <div class="inview">
 
