--- a/your-loan-t1.html
+++ b/your-loan-t1.html
@@ -79,12 +79,12 @@
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome-t1.html">StudentHome</a></li>
 	<li><a href="profile-t1.html">Profile</a></li>
-  <li>Your student Loan</li>
+  <li>Your payment and funding</li>
 </ol>
 
 <div class="r2">
     <div class="ou-content" id="ou-content">
-      <h1 class="h1main">Your student loan for Bachelor of Engineering (Honours)</h1>
+      <h1 class="h1main">Your payment and funding</h1>
       <div class="inview">
 
 
@@ -101,7 +101,7 @@
 
     <div class="inview_inner">
 
-
+<p><strong>You are paying by student loan</strong> for Bachelor of Engineering (Honours)</p>
         
 
         <p>
