more bits and bobs

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ hr {margin:2em 0; padding:0;}
               <ol>
             <li><a href="module-search.html">Module search</a></li>
             <li><a href="module-search-results.html">Module search results</a></li>
+            <li><a href="module-description.html">Module description</a></li>
           </ol>
         </li>
         <li><a href="bd-advisory-routes.html">Open Degree advisory routes</a></li>
