--- a/study.html
+++ b/study.html
@@ -62,9 +62,9 @@
 
 <div class="mnuwrap"><div class="sh-header" role="navigation">
 <ul>
-<li class="sh-home"><a href="studenthome.html">StudentHome</a></li>
-<li class="sh-profile"><a href="profile.html">Profile</a></li>
-<li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()" class="selected">Study</a></li>
+<li class="sh-home"><a href="#">StudentHome</a></li>
+<li class="sh-profile"><a href="#">Profile</a></li>
+<li class="sh-study"><a href="#" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()" class="selected">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
 </ul>
