--- a/studenthome-t2.html
+++ b/studenthome-t2.html
@@ -78,6 +78,7 @@
 <li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
+<li class="sh-scen"><a href="t2-study-record-scenarios.html">Scenarios</a></li>
 </ul>
 </div></div><div id="sh-header-menu"></div>
 <script type="text/javascript">
