scenario tab, resit edits

--- a/module-record-t3d.html
+++ b/module-record-t3d.html
@@ -67,6 +67,7 @@
 <li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
+<li class="sh-testing"><a href="t3-study-record-scenarios.html">Scenarios</a></li>
 </ul>
 </div></div><div id="sh-header-menu"></div>
 
@@ -85,7 +86,7 @@
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>DD102 Introducing the social sciences</h1>
+<h1>Resit: DD102 Introducing the social sciences</h1>
 <div class="inview">
 
 <ul class="list-style1">
@@ -96,13 +97,7 @@
   <li><a href="#">DD102 module website</a></li>
 </ul>
 
-<div class="ou-block">
 
-  <h2 class="style1">Overall module result</h2>
-    
-  <p>Your module result should be available by Friday 25 September 2015. </p>
-  
-</div>
 <div class="ou-block">
   
   <h2 class="style1">Examination</h2>
@@ -154,6 +149,14 @@
     </tbody></table>
 
 
+</div>
+
+<div class="ou-block">
+
+  <h2 class="style1">Overall module result</h2>
+    
+  <p>Your module result should be available by Friday 25 September 2015. </p>
+  
 </div>
 
 <div class="ou-block">
