--- a/module-record-t3b.html
+++ b/module-record-t3b.html
@@ -81,13 +81,13 @@
 	<li><a href="studenthome-t3.html">StudentHome</a></li>
 	<li><a href="profile-t3.html">Profile</a></li>
   <li><a href="t3-study-record-scenarios.html">Study record</a></li>
-	<li>DD102 Introducing the social sciences</li>
+	<li>T216 Cisco networking (CCNA)</li>
 </ol>
 
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>DD102 Introducing the social sciences</h1>
+<h1>T216 Cisco networking (CCNA)</h1>
 
 <div class="inview">
   
@@ -95,8 +95,8 @@
   <li><strong>Start</strong>: 4 October 2014</li>
   <li><strong>Level</strong>: 1</li>
   <li><strong>Credits</strong>: 60</li>
-  <li><a href="#">DD102 module description</a></li>
-  <li><a href="#">DD102 module website</a> (read only)</li>
+  <li><a href="#">T216 module description</a></li>
+  <li><a href="#">T216 module website</a> (read only)</li>
 </ul>
 
 <div class="ou-block">
