--- a/module-record-t3d.html
+++ b/module-record-t3d.html
@@ -81,20 +81,21 @@
 	<li><a href="studenthome-t3.html">StudentHome</a></li>
 	<li><a href="profile-t3.html">Profile</a></li>
   	<li><a href="t3-study-record-scenarios.html">Study record</a></li>
-	<li>DD102 Introducing the social sciences</li></ol>
+	<li>Resit: T216 Cisco networking (CCNA)</li>
+</ol>
 
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>Resit: DD102 Introducing the social sciences</h1>
+<h1>Resit: T216 Cisco networking (CCNA)</h1>
 <div class="inview">
 
 <ul class="list-style1">
   <li><strong>Start</strong>: September 2015 resit</li>
   <li><strong>Level</strong>: 1</li>
   <li><strong>Credits</strong>: 30</li>
-  <li><a href="#">DD102 module description</a></li>
-  <li><a href="#">DD102 module website</a></li>
+  <li><a href="#">T216 module description</a></li>
+  <li><a href="#">T216 module website</a></li>
 </ul>
 
 
