--- a/module-record-t3c.html
+++ b/module-record-t3c.html
@@ -81,13 +81,13 @@
 	<li><a href="studenthome-t3.html">StudentHome</a></li>
 	<li><a href="profile-t3.html">Profile</a></li>
   <li><a href="t3-study-record-scenarios.html">Study record</a></li>
-	<li>DD103 Investigating the social world</li>
+	<li>M250 Object-oriented Java programming</li>
 </ol>
 
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>DD103 Investigating the social world</h1>
+<h1>M250 Object-oriented Java programming</h1>
 <div class="inview">
 
   
@@ -95,8 +95,8 @@
   <li><strong>Start</strong>: 3 October 2015</li>
   <li><strong>Level</strong>: 1</li>
   <li><strong>Credits</strong>: 60</li>
-  <li><a href="#">DD103 module description</a></li>
-  <li><a href="#">DD103 module website</a></li>
+  <li><a href="#">M250 module description</a></li>
+  <li><a href="#">M250 module website</a></li>
 </ul>
 
 
