--- a/study-record-t3a.html
+++ b/study-record-t3a.html
@@ -139,13 +139,13 @@ $(document).ready(function(){
 <ul class="list-style1">
   <li><strong>Code</strong>: QD</li>
   <li><strong>Status</strong>: in progress</li>
-  <li><strong>Credits</strong>: 90 of 360</li>
+  <li><strong>Credits</strong>: 180 of 360</li>
 </ul>
 
 <table class="qual-progress">
   <tr>
     <td colspan="3">
-    <div class="progress-bar"><span class="progress" style="width:25%;">25%</span></div>
+    <div class="progress-bar"><span class="progress" style="width:50%;">50%</span></div>
     </td>
     </tr>
   <tr>
@@ -165,7 +165,10 @@ $(document).ready(function(){
 
 <table>
   <tr>
-    <td><a href="module-record-t3a.html">Investigating the social world (DD103)</a></td>
+    <td><a href="module-record-t3a.html">Technologies in practice (TM129)</a></td>
+  </tr>
+  <tr>
+    <td><a href="module-record-t3a.html">Discovering mathematics (MU123)</a></td>
   </tr>
 </table>
 
@@ -174,13 +177,18 @@ $(document).ready(function(){
 
 <table>
   <tr>
-    <td><a href="module-record-t3b.html"> Introducing the social sciences (DD102)</a></td>
+    <td><a href="module-record-t3b.html">Cisco networking (CCNA) (T216)</a></td>
     <td>2014</td>
     <td>Pass</td>
   </tr>
   <tr>
-    <td><a href="module-record-t3b.html">People, work and Society Access module (Y032)</a></td>
-    <td>2013</td>
+    <td><a href="module-record-t3b.html">An introduction to business studies (B120)</a></td>
+    <td>2014</td>
+    <td>Pass</td>
+  </tr>
+  <tr>
+    <td><a href="module-record-t3b.html">An introduction to retail management and marketing (B122)</a></td>
+    <td>2014</td>
     <td>Pass</td>
   </tr>
 </table>
