--- a/study-record-t3c.html
+++ b/study-record-t3c.html
@@ -124,11 +124,11 @@ $(document).ready(function(){
       <ul class="list-style1">
         <li><strong>Code</strong>: QD</li>
         <li><strong>Status</strong>: in progress</li>
-        <li><strong>Credits</strong>: 90 of 360</li>
+        <li><strong>Credits</strong>: 180 of 360</li>
       </ul>
       <table class="qual-progress">
         <tr>
-          <td colspan="3"><div class="progress-bar"><span class="progress" style="width:25%;">25%</span></div></td>
+          <td colspan="3"><div class="progress-bar"><span class="progress" style="width:50%;">50%</span></div></td>
         </tr>
         <tr>
           <td>Stage 1</td>
@@ -136,30 +136,38 @@ $(document).ready(function(){
           <td>Stage 3</td>
         </tr>
       </table>
-      <p><a href="#" class="ou-btn">Choose next modules</a></p>
+<p><a href="#" class="ou-btn">Choose next modules</a></p>
       <hr>
       <h3>Enrolled modules</h3>
       <table>
         <tr>
-          <td><a href="module-record-t3a.html">Investigating the social world (DD103)</a></td>
-          </tr>
+          <td><a href="module-record-t3a.html">Technologies in practice (TM129)</a></td>
+        </tr>
+        <tr>
+          <td><a href="module-record-t3a.html">Discovering mathematics (MU123)</a></td>
+        </tr>
       </table>
       <h3>Pending resit</h3>
       <table>
         <tr>
-          <td><a href="module-record-t3d.html"> Introducing the social sciences (DD102)</a></td>
+          <td><a href="module-record-t3d.html">Cisco networking (CCNA) (T216)</a></td>
         </tr>
       </table>
       <h3>Completed modules</h3>
       <table>
         <tr>
-          <td><a href="module-record-t3b.html"> Introducing the social sciences (DD102)</a></td>
+          <td><a href="module-record-t3b.html">Cisco networking (CCNA) (T216)</a></td>
           <td>2014</td>
           <td>Fail</td>
         </tr>
         <tr>
-          <td><a href="module-record-t3b.html">People, work and Society Access module (Y032)</a></td>
-          <td>2013</td>
+          <td><a href="module-record-t3b.html">An introduction to business studies (B120)</a></td>
+          <td>2014</td>
+          <td>Pass</td>
+        </tr>
+        <tr>
+          <td><a href="module-record-t3b.html">An introduction to retail management and marketing (B122)</a></td>
+          <td>2014</td>
           <td>Pass</td>
         </tr>
       </table>
