--- a/study-record-t3e.html
+++ b/study-record-t3e.html
@@ -132,14 +132,12 @@ If you’re not planning to study in [2015/16) you can <a href="#">extend your s
     <div class="box-qual-inner">
       <ul class="list-style1">
         <li><strong>Code</strong>: QD</li>
-        <li><strong>Status</strong>: on a study break</li>
-        <li><strong>Credits</strong>: 90 of 360</li>
+        <li><strong>Status</strong>: in progress</li>
+        <li><strong>Credits</strong>: 180 of 360</li>
       </ul>
-      
-
       <table class="qual-progress">
         <tr>
-          <td colspan="3"><div class="progress-bar"><span class="progress" style="width:25%;">25%</span></div></td>
+          <td colspan="3"><div class="progress-bar"><span class="progress" style="width:50%;">50%</span></div></td>
         </tr>
         <tr>
           <td>Stage 1</td>
@@ -147,25 +145,30 @@ If you’re not planning to study in [2015/16) you can <a href="#">extend your s
           <td>Stage 3</td>
         </tr>
       </table>
-      <p><a href="#" class="ou-btn">Choose next modules</a></p>
+<p><a href="#" class="ou-btn">Choose next modules</a></p>
       <hr>
       <h3>Completed modules</h3>
       <table>
         <tr>
-          <td><a href="module-record-t3b.html"> Introducing the social sciences (DD102)</a></td>
+          <td><a href="module-record-t3b.html">Cisco networking (CCNA) (T216)</a></td>
           <td>2014</td>
           <td>Pass</td>
         </tr>
         <tr>
-          <td><a href="module-record-t3b.html">People, work and Society Access module (Y032)</a></td>
-          <td>2013</td>
+          <td><a href="module-record-t3b.html">An introduction to business studies (B120)</a></td>
+          <td>2014</td>
+          <td>Pass</td>
+        </tr>
+        <tr>
+          <td><a href="module-record-t3b.html">An introduction to retail management and marketing (B122)</a></td>
+          <td>2014</td>
           <td>Pass</td>
         </tr>
       </table>
       <h3>Cancelled modules</h3>
       <table>
         <tr>
-          <td><a href="module-record-t3c.html">Investigating the social world (DD103)</a></td>
+          <td><a href="module-record-t3c.html">Object-oriented Java programming (M250)</a></td>
         </tr>
       </table>
       <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA/BSc (Honours) Open degree qualification</p>
