--- a/study-status.html
+++ b/study-status.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Assessment calculator - StudentHome - Open University</title>
+<title>Study status - Open University</title>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
@@ -78,15 +78,18 @@
 
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome.html">StudentHome</a></li>
-	<li>Profile</li>
+	<li><a href="profile.html">Profile</a></li>
+	<li>Your study status</li>
 </ol>
 
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>Your profile</h1>
+<h1 class="h1main">Your study status</h1>
+
 <div class="inview">
-  
+
+
 <div class="box-alert">
       <h2>On a study break</h2>
       <p>Registration for the [2015/16] academic year is now open.
@@ -96,39 +99,25 @@ You told us you were taking a break from study last year. If you want to start s
 If you’re not planning to study in [2015/16) you can <a href="#">extend your study break</a>.</p>
 </div>
 
-<hr />
+<form>
+<p>Select a statement that most accurately represents your current status</p>
 
-<div class="ou-block2">
-   		<p><strong>You can view and change your</strong></p>
-        <ul class="list-style2">
-        <li><a href="contact-details.html">Contact details</a></li>
-        <li><a href="study-status.html">Current study status</a></li>
-        <li><a href="current-occupation.html">Current occupation and study motivation</a></li>
-        <li><a href="identity-and-needs.html">Identity, needs and cicumstances</a></li>
-        <li><a href="previous-education.html">Previous education and background</a></li>
-        <li><a href="study-record.html">Study record</a></li>
-        <li><a href="finance.html">Your payment and funding</a></li>
-        </ul>
-</div>
+<ul>
+<li><label><input type="radio" name="thing"> I intend to study this year</label></li>
+<li><label><input type="radio" name="thing"> I am taking a break from study</label></li>
+<li><label><input type="radio" name="thing"> I no longer want to study with the OU</label></li>
+</ul>
 
-<div class="ou-block2">
-    	<p><strong>You can also</strong></p>
-      	<ul class="list-style2">
-        <li><a href="#">Change your password</a></li>
-        <li><a href="http://learn2.open.ac.uk/user/profile.php">Edit your online appearance</a></li>
-        <li><a href="http://learn2.open.ac.uk/course/format/studyplan/settings_manage.php">Set preferences for your online learning environment</a></li>
-  		</ul>
-</div>
+<p><input type="submit" value="update" /></p>
+
+</form>
 
 
-</div>
-
-
+<p><a href="profile.html">Back to Profile</a></p>
 </div>
 
 </div>
-
-
+</div>
 
 <div class="r3 aside">
 
@@ -146,12 +135,8 @@ If you’re not planning to study in [2015/16) you can <a href="#">extend your s
 
 </div>
 
-
-</div>
-
 </div>
 </div>
-
 <div id="ou-org-footer">
 
 <div class="ou-grid ou-mobile-footer" id="ou-mobile-jlinks"></div>
