--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ hr {margin:2em 0; padding:0;}
         <ol>
             <li><a href="contact-details.html">Contact details</a></li>
             <li><a href="current-occupation.html">Current occupation</a></li>
-            <li><a href="current-study-status.html">Current study status</a></li>
+            <li><a href="study-status.html">Current study status</a></li>
             <li><a href="identity-and-needs.html">Identity and needs</a></li>
             <li><a href="previous-education.html">Previous education</a></li>
             <li><a href="study-record.html">Study record</a> - incorporating old qual record
