--- a/current-occupation.html
+++ b/current-occupation.html
@@ -125,7 +125,7 @@
 </tbody></table>
 
 
-<p><a href="profile-a.html">Back to Profile</a></p>
+<p><a href="profile.html">Back to Profile</a></p>
 </div>
 
 </div>
