--- a/module-record-t4d.html
+++ b/module-record-t4d.html
@@ -67,6 +67,7 @@
 <li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
+<li class="sh-scen"><a href="t4-study-record-scenarios.html">Scenarios</a></li>
 </ul>
 </div></div><div id="sh-header-menu"></div>
 
@@ -80,12 +81,12 @@
 	<li><a href="studenthome-t4.html">StudentHome</a></li>
 	<li><a href="profile-t4.html">Profile</a></li>
   	<li><a href="t4-study-record-scenarios.html">Study record</a></li>
-	<li>DD102 Introducing the social sciences</li></ol>
+	<li>Resit: DD102 Introducing the social sciences</li></ol>
 
 
 <div class="r2">
 <div class="ou-content" id="ou-content">
-<h1>DD102 Introducing the social sciences</h1>
+<h1>Resit: DD102 Introducing the social sciences</h1>
 <div class="inview">
 
 <ul class="list-style1">
@@ -96,13 +97,6 @@
   <li><a href="#">DD102 module website</a></li>
 </ul>
 
-<div class="ou-block">
-
-  <h2 class="style1">Overall module result</h2>
-    
-  <p>Your module result should be available by Friday 25 September 2015. </p>
-  
-</div>
 <div class="ou-block">
   
   <h2 class="style1">Examination</h2>
@@ -158,12 +152,20 @@
 
 <div class="ou-block">
 
+  <h2 class="style1">Overall module result</h2>
+    
+  <p>Your module result should be available by Friday 25 September 2015. </p>
+  
+</div>
+
+
+<div class="ou-block">
+
     <h2 class="style1">Student Support Team</h2>
     <p>Find out about the information and advice available from your Student Support Team and their contact details.</p>
     <ul>
       <li><a href="student-support-team.aspx?m=T218" >Contact your Student Support Team</a></li>
     </ul>
-
 
 </div>
 
