--- a/module-record.html
+++ b/module-record.html
@@ -288,7 +288,7 @@
   that this record is incorrect, please <a href="student-support-team.aspx?m=T207">contact us</a>.</p>
 
 
-<p><a href="study-record-a.html">Back to your study record</a></p>
+<p><a href="study-record.html">Back to your study record</a></p>
 
 </div>
 
