--- a/study-status.html
+++ b/study-status.html
@@ -99,16 +99,18 @@ You told us you were taking a break from study last year. If you want to start s
 If you’re not planning to study in [2015/16) you can <a href="#">extend your study break</a>.</p>
 </div>
 
-<form>
-<p>Select a statement that most accurately represents your current status</p>
+<hr>
 
-<ul>
+<form>
+<p><strong>Select a statement that most accurately represents your current status</strong></p>
+
+<ul class="list-style2">
 <li><label><input type="radio" name="thing"> I intend to study this year</label></li>
 <li><label><input type="radio" name="thing"> I am taking a break from study</label></li>
 <li><label><input type="radio" name="thing"> I no longer want to study with the OU</label></li>
 </ul>
 
-<p><input type="submit" value="update" /></p>
+<p><input type="submit" value="Update" /></p>
 
 </form>
 
