--- a/contact-details.html
+++ b/contact-details.html
@@ -147,7 +147,7 @@
       <td><a href="profile-edit.html">Edit</a></td>
     </tr>
   </table>
-<p><a href="profile-a.html">Back to Profile</a></p>
+<p><a href="profile.html">Back to Profile</a></p>
 </div>
 
 </div>
