--- a/identity-and-needs.html
+++ b/identity-and-needs.html
@@ -144,7 +144,7 @@
 
 </tbody></table>
 
-<p><a href="profile-a.html">Back to Profile</a></p>
+<p><a href="profile.html">Back to Profile</a></p>
 </div>
 
 </div>
