--- a/your-current-occupation-study-t4.html
+++ b/your-current-occupation-study-t4.html
@@ -67,6 +67,7 @@
 <li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
+<li class="sh-scen"><a href="t4-study-record-scenarios.html">Scenarios</a></li>
 </ul>
 </div></div><div id="sh-header-menu"></div>
 
