--- a/profile.html
+++ b/profile.html
@@ -101,7 +101,19 @@
 
 <div class="ou-grid ou-profile">
 
-<div class="ou-c1of3 personal">
+<div class="ou-c1of3 study">
+<div>
+    	<h2>Study record</h2>
+        <p>Your record of all current and past OU studies.</p>
+      	<ul class="list-style2">
+      	  <li><a href="study-record.html">Study record</a></li>
+      	  <li><a href="study-status.html">Current study status</a></li>
+          <li><a href="finance.html">Your payment and funding</a></li>
+  		</ul>
+</div>
+</div>
+
+<div class="ou-c2of3 personal">
 <div>
    		<h2>About you</h2>
         <ul class="list-style2">
@@ -110,17 +122,6 @@
         <li><a href="identity-and-needs.html">Identity, needs and cicumstances</a></li>
         <li><a href="previous-education.html">Previous education and background</a></li>
         </ul>
-</div>
-</div>
-
-<div class="ou-c2of3 study">
-<div>
-    	<h2>Your study</h2>
-      	<ul class="list-style2">
-      	  <li><a href="study-record.html">Study record</a></li>
-      	  <li><a href="study-status.html">Current study status</a></li>
-          <li><a href="finance.html">Your payment and funding</a></li>
-  		</ul>
 </div>
 </div>
 
