SH box + css edits

--- a/studenthome.html
+++ b/studenthome.html
@@ -13,7 +13,8 @@
 <link rel="stylesheet" type="text/css" href="css/site10.css" />
 
 
-
+<!-- new stylesheet -->
+<link rel="stylesheet" type="text/css" href="css/study-planning.css" />
 
 
 
@@ -352,7 +353,7 @@ if (typeof window.InitModuleAjax=='function')InitModuleAjax('T27616B',1);
 <div class="feed">
 
 
-<div class="help-tips article">
+<div class="box box-questions">
   <h2>Help tips</h2>
   <ul>
     <li><a href="#">Change qualification</a></li>
@@ -361,7 +362,7 @@ if (typeof window.InitModuleAjax=='function')InitModuleAjax('T27616B',1);
     <li><a href="#">How to pass exams</a></li>
     <li><a href="#">Effective time management tips</a></li>
   </ul>
-  <p><a href="#">More Help..</a></p>
+<p class="box-link"><a href="#">More Help</a></p>
 </div>
 
     <div id="mtnm2003483417b" class="motion"><div class="article">
