fixed SH tips box title

--- a/studenthome.html
+++ b/studenthome.html
@@ -354,7 +354,7 @@ if (typeof window.InitModuleAjax=='function')InitModuleAjax('T27616B',1);
 
 
 <div class="box box-questions">
-  <h2>Help tips</h2>
+  <h2>How do I?</h2>
   <ul>
     <li><a href="#">Change qualification</a></li>
     <li><a href="#">Take a study break</a></li>
