updated index with links to additional pages

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ hr {margin:2em 0; padding:0;}
     </li>
     <li><a href="finance.html">Payment and funding</a></li>
     <li><a href="profile-edit.html">Edit profile</a></li>
+    <li><a href="change-password.html">Change your password</a></li>
+    <li><a href="edit-online-appearance.html">Edit online appearance</a></li>
+    <li><a href="set-preferences.html">Set preferences</a></li>
   </ol>
   </li>
 </ol>
