--- a/change-password.html
+++ b/change-password.html
@@ -91,10 +91,15 @@
 
 <form>
 
-<p><label>Your current password <input type="password" /></label> <a href="">Forgotten your password?</a></p>
-<p><label>Your new password <input type="password" /></label></p>
-<p><input type="submit" value="Change your password" /></p>
+<p><label>New password <input type="password" /></label></p>
+<p><label>Confirm new password <input type="password" /></label></p>
+<p><input type="submit" value="Set Password" /></p>
 </form>
+
+
+<p>Your new password must be between 8 and 12 characters long, include letters, at least 1 number and at least one capital letter. It can also include any of these special-characters: !, $, %, ^, &, *, [, ], @, #, ?, +, -, _ </p>
+
+<p>To read about our sign-in and security features, see <a href="#">help</a>. </p>
 
 
 <p><a href="profile.html">Back to Profile</a></p>
