--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@ hr {margin:2em 0; padding:0;}
               <ol>
                 <li><a href="module-record.html">Module record</a> - incorporating assessment strategy, missing/incorrect scores
                   <ol>
-                    <li><a href="assessment-calculator.html">Assessment calculator</a></li>
+                    <li><a href="assessment-calculator.html">Assessment calculator</a>
+                      <ol>
+                        <li><a href="assessment-calculator-result-detail.html">Assessment calculator result detail</a></li>
+                      </ol>
+                    </li>
                   </ol>
                  </li>
                 <li><a href="next-module.html">Next module</a>
