--- a/study-record.html
+++ b/study-record.html
@@ -155,9 +155,9 @@ $(document).ready(function(){
   </tr>
 </table>
 
-<p class="code">If NFQ</p>
+<p class="code"><em>{If NFQ}</em></p>
 <p><a href="interrupt-page.html" class="ou-btn">Choose next modules</a></p>
-<p class="code">If OFQ</p>
+<p class="code"><em>{If OFQ}</em></p>
 <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
 <hr>
 
@@ -279,7 +279,7 @@ $(document).ready(function(){
 </div> <!-- end box-qual -->
 
 
-<p>If another qual:</p>
+<p><em>{If another qual}</em></p>
 
 <div class="box-qual collapsed">
 
